# Mazu

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: demo.md  vscode-extension-design.md
mazu/: __init__.py  banner.py  cli.py  config.py  diagnostics.py  output.py
mazu/action_log/: store.py
mazu/agent/: autonomous.py  compaction.py  context.py  council.py  interaction.py  loop.py  prompts.py  session.py
mazu/checkpoint/: manager.py  store.py
mazu/llm/: capabilities.py  client.py  error_mapping.py  errors.py  pricing.py  retry.py  types.py
mazu/llm/providers/: anthropic_provider.py  base.py  deepseek_provider.py  gemini_provider.py  local_provider.py  openai_compatible.py  openai_provider.py
mazu/memory/: bm25.py  consolidate.py  embeddings.py  extraction.py  retrieval.py  schema.sql  store.py
mazu/runs/: store.py
mazu/skills/: manager.py
mazu/tools/: base.py  fs.py  memory_tools.py  registry.py  shell.py  skill_tools.py
mazu/ui/: app.py  data.py
mazu/usage/: store.py
tests/: conftest.py  test_action_log_store.py  test_action_log_wiring.py  test_autonomous_compaction.py  test_bm25.py  test_capabilities.py  test_checkpoint.py  test_checkpoint_branching.py  test_cli.py  test_compaction.py  test_config.py  test_council.py  test_dedup_regression.py  test_diagnostics.py  test_embeddings.py  test_fs_atomic_write.py  test_fs_safety.py  test_gemini_provider.py  test_json_output.py  test_local_provider.py  test_memory_consolidate.py  test_memory_store.py  test_memory_tools.py  test_pricing.py  test_prompt_caching.py  test_provider_routing.py  test_retrieval.py  test_run_report_resume.py  test_runs_store.py  test_safer_execution.py  test_shell_safety.py  test_skills_manager.py  test_streaming.py  test_ui_app.py  test_ui_data.py  test_usage_store.py  test_usage_wiring.py
