[project]
name = "mazu"
version = "0.1.0"
description = "A memory-augmented, checkpointable coding agent CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[project.scripts]
mazu = "mazu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mazu"]
